crates/lex/src/tests/snapshots/char_empty.snap
---
source: crates/lex/src/tests.rs
assertion_line: 25
expression: "(test[1], tokens)"
---
- "''"
- Err:
    message: "Character literal can't be empty"
    line: 1
    column: 1

