crates/lex/src/tests/snapshots/char_single_quote.snap
---
source: crates/lex/src/tests.rs
assertion_line: 25
expression: "(test[1], tokens)"
---
- "'"
- Err:
    message: "Unterminated character literal. Expecting `'`, got `EOF`"
    line: 1
    column: 1

