crates/lex/src/tests/snapshots/char_too_many.snap
---
source: crates/lex/src/tests.rs
assertion_line: 25
expression: "(test[1], tokens)"
---
- "'mm'"
- Err:
    message: "Invalid character sequence: `'mm'`"
    line: 1
    column: 3

